[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/Planet/Planet_Whole.png" type="Texture" id=1]
[ext_resource path="res://Assets/Planet/Planet_Cracked_1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Planet/Planet_Cracked_2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Planet/Planet_Cracked_3.png" type="Texture" id=4]
[ext_resource path="res://Assets/FX/PlanetExplosion/Explosion_Planet_7.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Planet.gd" type="Script" id=6]
[ext_resource path="res://Assets/FX/PlanetExplosion/Explosion_Planet_1.png" type="Texture" id=7]
[ext_resource path="res://Assets/FX/PlanetExplosion/Explosion_Planet_5.png" type="Texture" id=8]
[ext_resource path="res://Assets/FX/PlanetExplosion/Explosion_Planet_6.png" type="Texture" id=9]
[ext_resource path="res://Assets/FX/PlanetExplosion/Explosion_Planet_8.png" type="Texture" id=10]
[ext_resource path="res://Assets/FX/PlanetExplosion/Explosion_Planet_9.png" type="Texture" id=11]
[ext_resource path="res://Assets/FX/PlanetExplosion/Explosion_Planet_4.png" type="Texture" id=12]
[ext_resource path="res://Assets/FX/PlanetExplosion/Explosion_Planet_2.png" type="Texture" id=13]
[ext_resource path="res://Assets/FX/PlanetExplosion/Explosion_Planet_3.png" type="Texture" id=14]
[ext_resource path="res://Scenes/SmokeStack.tscn" type="PackedScene" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 12 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 366.988

[node name="Planet" type="Area2D"]
script = ExtResource( 6 )

[node name="Alive" type="AnimatedSprite" parent="."]
position = Vector2( 22.4492, -22.4493 )
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 1 )

[node name="Exploding" type="AnimatedSprite" parent="."]
position = Vector2( 6.73462, 47.1435 )
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.75, 0.75 )
shape = SubResource( 3 )

[node name="SmokeStack" parent="." instance=ExtResource( 15 )]
position = Vector2( 113.499, -303.987 )
rotation = 0.279253
[connection signal="area_entered" from="." to="." method="_on_Planet_area_entered"]
[connection signal="animation_finished" from="Exploding" to="." method="_on_Exploding_animation_finished"]
